...
                      builder: (context) => const HomePage(),
                    ),
                  );
                },
              ),
              IconButton(
                key: const Key("serviceList"),
                icon: const Icon(
                  Icons.grid_view,
                  color: Colors.white,
                ),
                onPressed: () {
                  Navigator.pushReplacement(
...
                      builder: (context) => const ServicesPage(),
                    ),
                  );
                },
              ),
              IconButton(
                key: const Key("profileInfo"),
                icon: const Icon(
                  Icons.account_box,
                  color: Colors.white,
                ),
                onPressed: () {
                  if (controller.isOpen) {
...
