...
          trailing: PopupMenuButton<String>(
            position: PopupMenuPosition.under,
            color: Colors.white,
            menuPadding: EdgeInsetsGeometry.all(0),
            onSelected: (value) {
              if (value == 'delete') onDelete();
              if (value == 'logout') onLogout();
            },
            itemBuilder: (context) => [
              const PopupMenuItem(
                  value: 'logout',
                  child: Row(children: [
                    Expanded(
...
