...
              ),
            ),
            OverflowBar(
              alignment: MainAxisAlignment.center,
              children: <Widget>[
                ElevatedButton(
                  key: const Key("backFromWebviewButton"),
                  child: Text("Quitter ${widget.text}"),
                  onPressed: () {
                    manager.removeSessionCookies();
                    Navigator.of(context).pop();
                  },
                ),
...
